Add official bibtex on the webpage

--- a/index.html
+++ b/index.html
@@ -162,10 +162,17 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{stan2023facediff,
-  author    = {Stan, Stefan and Haque, Kazi I. and Yumak, Zerrin},
-  title     = {FaceDiffusion: Speech-Driven Facial Animation Synthesis Using Diffusion Models},
-  year      = {2023},
+    <pre><code>@inproceedings{FaceDiffuser_Stan_MIG2023,
+author = {Stan, Stefan and Haque,  Kazi Injamamul and Yumak,  Zerrin},
+title = {FaceDiffuser: Speech-Driven 3D Facial Animation Synthesis Using Diffusion},
+booktitle = {ACM SIGGRAPH Conference on Motion, Interaction and Games (MIG '23), November 15--17, 2023, Rennes, France},
+year = {2023},
+location = {Rennes, France},
+numpages = {11},
+url = {https://doi.org/10.1145/3623264.3624447},
+doi = {10.1145/3623264.3624447},
+publisher = {ACM},
+address = {New York, NY, USA},
 }</code></pre>
   </div>
 </section>
