Update project title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="FaceDiffusion produces facial animation for 3D characters based on speech">
+        content="FaceDiffuser produces facial animation for 3D characters based on speech">
   <meta name="keywords" content="FaceDiffusion, Diffusion, Animation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FaceDiffusion: Speech-Driven 3D Facial Animation Synthesis Using Diffusion Models</title>
+  <title>FaceDiffuser: Speech-Driven 3D Facial Animation Synthesis Using Diffusion</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -34,8 +34,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">FaceDiffusion</h1> 
-          <h2 class="title is-3 publication-title">Speech-Driven 3D Facial Animation Synthesis Using Diffusion Models </h2>
+          <h1 class="title is-1 publication-title">FaceDiffuser</h1> 
+          <h2 class="title is-3 publication-title">Speech-Driven 3D Facial Animation Synthesis Using Diffusion</h2>
           <div class="is-size-3 publication-authors">
             <span class="author-block"> <a href="https://stefan-st.github.io/personal-website/"> Stefan Stan </a>, </span>
             <span class="author-block"> <a href="https://www.uu.nl/staff/KIHaque"> Kazi Injamamul Haque </a>, </span>
