Fix typo in video

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h1 class="title is-1 publication-title">FaceDiffuser</h1> 
           <h2 class="title is-3 publication-title">Speech-Driven 3D Facial Animation Synthesis Using Diffusion</h2>
           <div class="is-size-3 publication-authors">
-            <span class="author-block"> <a href="https://stefan-st.github.io/personal-website/"> Stefan Stan </a>, </span>
+            <span class="author-block"> <a href="https://www.linkedin.com/in/stefan-stan-824088159/"> Stefan Stan </a>, </span>
             <span class="author-block"> <a href="https://www.uu.nl/staff/KIHaque"> Kazi Injamamul Haque </a>, </span>
             <span class="author-block"> <a href="https://www.uu.nl/staff/ZYumak"> Zerrin Yumak </a> </span>
           </div>
